--- a/first.html
+++ b/first.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
   <head>
-    <title>My first project </tile>
+    <title>My first project </title>
   </head>
   <body>
     <h1>Hello world</h1>
